Replace kayak server logo with CE variant

--- a/http/css/land.css
+++ b/http/css/land.css
@@ -171,7 +171,7 @@ height: 275px;
 
 			/*NEW or ADJUSTED*******/
 #logo_medium {
-background-image: url(../img/OmniOS_logo_medium.png);
+background-image: url(../img/OmniOSce_logo_medium.png);
 background-repeat: no-repeat;
 background-position: left;
 width: 450px;
